packages/react-devbar/src/index.css
.cui-devBar {
	align-items: center;
	bottom: 0;
	display: flex;
	flex-direction: column;
	position: fixed;
	z-index: 50;
	left: 0;
	right: 0;
	opacity: 1;
	padding: 1rem;
	transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
}

.cui-devBar-content,
.cui-devBar-panel-content {
	background-color: hsl(0, 0%, 15%);
	color: hsl(0, 0%, 90%);
}

.cui-devBar-content {
	align-self: center;
	align-items: center;
	border-radius: 0.75rem;
	box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
	display: flex;
	gap: 0.75rem;
	padding: 0.35rem;
	margin: 0 auto;
	border: 1px solid hsl(0 0 85);
}

.cui-devBar-close,
.cui-devBar-trigger-label,
.cui-devBar-brand {
	align-items: center;
	height: 2.5rem;
	border-radius: 0.5rem;
	justify-content: center;
	max-height: 2.5rem;
	min-height: 2.5rem;
	white-space: nowrap;
}

.cui-devBar-close {
	background: transparent;
	cursor: pointer;
	display: flex;
	max-width: 2.5rem;
	width: 2.5rem;
	order: 999;
	transition: background-color 200ms;
}

.cui-devBar-close:hover {
	background-color: hsl(0 0 96);
}

.cui-devBar-brand {
	align-items: center;
	display: flex;
	gap: 0.75rem;
	text-align: right;
}

.cui-devBar-trigger-label {
	align-items: center;
	color: inherit;
	cursor: pointer;
	display: inline-flex;
	font-weight: 500;
	gap: 0.3rem;
	padding: 0 0.75rem;
	transition: background-color 200ms;
}

.cui-devBar-trigger-label:hover {
	background-color: hsl(0, 0%, 3%);
}

.cui-devBar-panel-content {
	background: hsl(0 0 100);
	border: 1px solid hsl(0 0 85);
	box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
	border-radius: 0.75rem;
	display: flex;
	min-width: min(20rem, 100%);
	max-width: 100%;
	flex-direction: column;
	flex-shrink: 1;
}

.cui-devBar-panel-content h2 {
	font-weight: 600;
	margin-bottom: 0;
	border-radius: 0.75rem 0.75rem 0 0;
	background: #f8f8f8;
}

.cui-devBar-panel-body {
	border-top: 1px solid hsl(0 0 85);
	display: flex;
	flex-direction: column;
	gap: 1rem;
	padding: 1.25rem;
	color: hsl(0 0 10);
}

.cui-devBar-panel {
	padding: 0;
	border: none;
	border-radius: 0.75rem;
	background: transparent;
}

.cui-devBar-panel::backdrop {
	background: hsl(0 0 100 / 0.8);
}

.cui-devBar-panel[open] {
	animation: dialog-show 150ms cubic-bezier(0.16, 1, 0.3, 1);
}

.cui-devBar-panel-header {
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding: 0.75rem 1rem;
	background: #f8f8f8;
	border-radius: 0.75rem 0.75rem 0 0;
	border-bottom: 1px solid hsl(0 0 85);
	color: hsl(0 0 10);
}

.cui-devBar-close-button {
	padding: 0.25rem 0.5rem;
	background: transparent;
	border: none;
	border-radius: 0.375rem;
	cursor: pointer;
	font-size: 1.25rem;
	line-height: 1;
	color: hsl(0 0 10);
	transition: background-color 200ms;
}

.cui-devBar-close-button:hover {
	background-color: hsl(0 0 90);
}

@keyframes dialog-show {
	from {
		opacity: 0;
		transform: translateY(10px);
	}
	to {
		opacity: 1;
		transform: translateY(0);
	}
}

/* Media Queries */
@media screen and (min-width: 768px) {
	.cui-devBar-trigger {
		position: relative;
	}

	.cui-devBar-panel-content {
		min-width: unset;
		max-width: unset;
	}

	.cui-devBar-panel-body {
		min-width: 20rem;
	}
}

/* Hidden States */
.cui-devBar:not([data-expanded]) {
	transform: translateY(2rem);
	opacity: 0;
	max-width: 5rem;
	margin: auto;
}

.cui-devBar:not([data-expanded]):hover,
.cui-devBar:not([data-expanded]):focus-within {
	transform: unset;
	opacity: 1;
}

[id^="dev-bar-panel"]:not([data-expanded]) > * {
	display: none;
}

.cui-devBar-panel .cui-table-wrapper {
	overflow: auto;
}


/* Error styles */
.cui-devError {
	position: fixed;
	inset: 0;
	width: 100vw;
	height: 100vh;
	z-index: 16777271;
	display: flex;
	justify-content: center;
	align-items: flex-start;
	background: rgba(212, 212, 212, 0.66);
	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
}

.cui-devError-in {
	z-index: 51;
	width: 100%;
	height: 100%;
	color: #333333;
	background: #222222;
	box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
	display: flex;
	flex-direction: column;
	overflow: hidden;
}

.cui-devError-header {
	background: #cd1818;
	color: #ffffff;
	padding: 0.5em 1em;
	border-bottom: 1px solid #980a0a;
}

.cui-devError-content {
	overflow: auto;
}

.cui-devError-errorMessage,
.cui-devError-errorName,
.cui-devError-errorDetails {
	margin: 0;
	flex: 0 0 auto;
	font-weight: 400;
	white-space: pre-wrap;
	overflow-wrap: break-word;
	line-height: 1.5;
}

.cui-devError-errorMessage {
	font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace;
	margin-top: 0.75rem;
	font-size: 1.25rem;
}

.cui-devError-errorDetails {
	font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace;
	margin-top: 0.75rem;
	font-size: 0.875rem;
	white-space: pre;
}

.cui-devError-causeLink {
	color: #ffcc00;
	text-decoration: underline;
	text-underline-offset: 4px;
}

.cui-devError-stack {
	flex: 1 1 auto;
}

.cui-devError-stack-dump {
	color: #ffffff;
	margin-top: 1rem;
	padding: 1rem;
	white-space: pre-wrap;
	font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace;
	font-size: 0.875rem;
}

.cui-devError-bar {
	padding: 0.5rem 0.5rem 0.5rem 1rem;
	background: #ac1616;
	color: #eeeeee;
	display: flex;
	align-items: center;
}

.cui-devError-causedBy {
	padding: 0.5rem 0.5rem 0.5rem 1rem;
	background: #ffcc00;
	color: #000000;
	display: flex;
	align-items: center;
}

.cui-devError-actions {
	margin-left: auto;
	display: flex;
	gap: 0.5rem;
}

.cui-devError-actions .cui-button {
	color: #ffffff;
	border-color: #cbcbcb;
	padding: 0.5rem 1rem;
	border-radius: 0.375rem;
	font-weight: 500;
	transition: all 200ms;
}

.cui-devError-actions .cui-button:hover {
	color: #ffffff;
}

.cui-devError-close {
	margin-left: 1rem;
}

.cui-devError-close .cui-button {
	border-color: transparent;
}

.cui-devError-switcher {
	display: flex;
	align-items: center;
	margin-left: 2rem;
	gap: 0.75rem;
}

.cui-devError-switcherButtons {
	display: flex;
	align-items: center;
	gap: 0.5rem;
}

.cui-devError-closeButton,
.cui-devError-switcherButton {
	border: 1px solid #cbcbcb;
	border-radius: 0.375rem;
	padding: 0.375rem 0.75rem;
	font-size: 0.875rem;
	font-weight: 500;
	transition: all 200ms;
	background: transparent;
}

.cui-devError-closeButton:hover,
.cui-devError-switcherButton:hover {
	border-color: #910f0f;
	background: #910f0f;
}

.cui-devError-errorCount {
	margin: 0;
	margin-right: 0.75rem;
	font-weight: 500;
}

/* Stack Frame Styles */
.cui-devError-stackFrame {
	font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace;
	border-bottom: 1px solid #666666;
}

.cui-devError-stackFrameHeader {
	display: flex;
	padding: 0.75rem 1rem;
	background: #333333;
	color: #ffffff;
	border-bottom: 1px solid #666666;
}

.cui-devError-stackFrameSource {
	margin-left: 0.5rem;
	color: hsl(0, 0%, 88%);
}

.cui-devError-stackFrameCallee {
	margin-left: 1rem;
	color: #a4ffa4
}

.cui-devError-stackFrameCode {
	background: #222222;
	color: #d5d5d5;
}

.cui-devError-stackFrameLine {
	display: flex;
	transition: all 200ms;
}

.cui-devError-stackFrameLine.is-active {
	color: hsl(0, 0%, 100%);
	background: hsl(0, 79%, 45%);
}

.cui-devError-stackFrameLine.is-active .cui-devError-stackFrameLineNumber {
	color: hsl(0, 0%, 100%);
}

.cui-devError-stackFrameLineNumber {
	color: hsl(0, 0%, 53%);
	flex: 0 0 50px;
	text-align: right;
	padding: 0.375rem;
	user-select: none;
}

.cui-devError-stackFrameLineCode {
	padding: 0.375rem 1rem;
	white-space: pre-wrap;
	tab-size: 4;
}

/* Error Badge Styles */
.cui-devErrorBadge {
	position: fixed;
	bottom: 1.25rem;
	left: 1.25rem;
	z-index: 50;
}

.cui-devErrorBadge-button {
	display: inline-flex;
	align-items: center;
	background: hsl(0, 79%, 45%);
	color: hsl(0, 0%, 100%);
	font-weight: 600;
	box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
	border-radius: 0.75rem;
	padding: 0.75rem 1.5rem;
	cursor: pointer;
	transition: all 200ms;
}

.cui-devErrorBadge-button:hover {
	background: hsl(0, 79%, 45%);
	color: hsl(0, 0%, 100%);
	transform: translateY(-1px);
}

.cui-devError-body {
	overflow: hidden;
}

